@@ -8,7 +8,9 @@ import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.events.message.MessageUpdateEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-import net.javadiscord.javabot.Bot;
+import net.javadiscord.javabot.data.config.BotConfig;
+import net.javadiscord.javabot.data.h2db.DbHelper;
+import net.javadiscord.javabot.systems.moderation.warn.dao.WarnRepository;
 import net.javadiscord.javabot.systems.moderation.warn.model.WarnSeverity;
 import net.javadiscord.javabot.systems.notification.NotificationService;
 import net.javadiscord.javabot.util.ExceptionLogger;
@@ -21,9 +23,11 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Scanner;
+import java.util.concurrent.ExecutorService;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -40,18 +44,33 @@ public class AutoMod extends ListenerAdapter {
 					+ "(([\\w\\-]+\\.)+?([\\w\\-.~]+/?)*"
 					+ "[\\p{Alnum}.,%_=?&#\\-+()\\[\\]*$~@!:/{};']*)",
 			Pattern.CASE_INSENSITIVE | Pattern.MULTILINE | Pattern.DOTALL);
+	private final NotificationService notificationService;
+	private final BotConfig botConfig;
 	private List<String> spamUrls;
+	private final DbHelper dbHelper;
+	private final WarnRepository warnRepository;
+	private final ExecutorService asyncPool;
 
 	/**
 	 * Constructor of the class, that creates a list of strings with potential spam/scam urls.
+	 * @param notificationService The {@link QOTWPointsService}
+	 * @param botConfig The main configuration of the bot
+	 * @param dbHelper An object managing databse operations
+	 * @param asyncPool The main thread pool for asynchronous operations
+	 * @param warnRepository The main thread pool for asynchronous operations
 	 */
-	public AutoMod() {
+	public AutoMod(NotificationService notificationService, BotConfig botConfig, DbHelper dbHelper, ExecutorService asyncPool, WarnRepository warnRepository) {
+		this.notificationService = notificationService;
+		this.botConfig = botConfig;
+		this.dbHelper = dbHelper;
+		this.warnRepository = warnRepository;
+		this.asyncPool = asyncPool;
 		try(Scanner scan = new Scanner(new URL("https://raw.githubusercontent.com/DevSpen/scam-links/master/src/links.txt").openStream()).useDelimiter("\\A")) {
 			String response = scan.next();
 			spamUrls = List.of(response.split("\n"));
 		} catch (IOException e) {
 			ExceptionLogger.capture(e, getClass().getSimpleName());
-			spamUrls = List.of();
+			spamUrls = Collections.emptyList();
 		}
 		log.info("Loaded {} spam URLs!", spamUrls.size());
 	}
@@ -90,7 +109,7 @@ public class AutoMod extends ListenerAdapter {
 	private void checkNewMessageAutomod(@Nonnull Message message) {
 		// mention spam
 		if (message.getMentions().getUsers().size() >= 5) {
-			new ModerationService(Bot.getConfig().get(message.getGuild()))
+			new ModerationService(notificationService, botConfig.get(message.getGuild()), warnRepository, asyncPool)
 					.warn(
 							message.getAuthor(),
 							WarnSeverity.MEDIUM,
@@ -123,8 +142,8 @@ public class AutoMod extends ListenerAdapter {
 	private void checkContentAutomod(@Nonnull Message message) {
 		//Check for Advertising Links
 		if (hasAdvertisingLink(message)) {
-			NotificationService.withGuild(message.getGuild()).sendToModerationLog(c -> c.sendMessageFormat("Message: `%s`", message.getContentRaw()));
-			new ModerationService(Bot.getConfig().get(message.getGuild()))
+			notificationService.withGuild(message.getGuild()).sendToModerationLog(c -> c.sendMessageFormat("Message: `%s`", message.getContentRaw()));
+			new ModerationService(notificationService, botConfig.get(message.getGuild()), warnRepository, asyncPool)
 					.warn(
 							message.getAuthor(),
 							WarnSeverity.MEDIUM,
@@ -141,8 +160,8 @@ public class AutoMod extends ListenerAdapter {
 
 		//Check for suspicious Links
 		if (hasSuspiciousLink(message)) {
-			NotificationService.withGuild(message.getGuild()).sendToModerationLog(c -> c.sendMessageFormat("Suspicious Link sent by: %s (`%s`)", message.getAuthor().getAsMention(), message.getContentRaw()));
-			new ModerationService(Bot.getConfig().get(message.getGuild()))
+			notificationService.withGuild(message.getGuild()).sendToModerationLog(c -> c.sendMessageFormat("Suspicious Link sent by: %s (`%s`)", message.getAuthor().getAsMention(), message.getContentRaw()));
+			new ModerationService(notificationService, botConfig.get(message.getGuild()), warnRepository, asyncPool)
 					.warn(
 							message.getAuthor(),
 							WarnSeverity.MEDIUM,
@@ -167,7 +186,7 @@ public class AutoMod extends ListenerAdapter {
 		if (!msg.getAttachments().isEmpty() && msg.getAttachments().stream().allMatch(a -> Objects.equals(a.getFileExtension(), "java"))) {
 			return;
 		}
-		new ModerationService(Bot.getConfig().get(member.getGuild()))
+		new ModerationService(notificationService, botConfig.get(member.getGuild()), warnRepository, asyncPool)
 				.timeout(
 						member,
 						"Automod: Spam",
@@ -229,7 +248,7 @@ public class AutoMod extends ListenerAdapter {
 		Matcher matcher = INVITE_URL.matcher(cleanString(message.getContentRaw()));
 		int start = 0;
 		while (matcher.find(start)) {
-			if (Bot.getConfig().get(message.getGuild()).getModerationConfig().getAutomodInviteExcludes().stream().noneMatch(matcher.group()::contains)) {
+			if (botConfig.get(message.getGuild()).getModerationConfig().getAutomodInviteExcludes().stream().noneMatch(matcher.group()::contains)) {
 				return true;
 			}
 			start = matcher.start() + 1;
@@ -238,6 +257,6 @@ public class AutoMod extends ListenerAdapter {
 	}
 
 	private boolean isSuggestionsChannel(@NotNull TextChannel channel) {
-		return channel.equals(Bot.getConfig().get(channel.getGuild()).getModerationConfig().getSuggestionChannel());
+		return channel.equals(botConfig.get(channel.getGuild()).getModerationConfig().getSuggestionChannel());
 	}
 }
